fix(mobile): fix overflow and margin issues

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -10,7 +10,6 @@ html {
   scroll-behavior: smooth;
 
   body {
-    overflow: hidden;
     background-color: $lighter-background-color;
     color: $primary-font-color;
     font-weight: 600;
@@ -36,6 +35,12 @@ html {
           text-align: center;
           width: 100%;
           margin-top: 200px;
+        }
+
+        @media (max-width: 750px) {
+          .welcome-content {
+            margin-top: 130px;
+          }
         }
 
         h1 {
